# MindOne

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_EMAIL_AUTH.md  LICENSE  PROJECT_SUMMARY.md  README.md  TEST_EMAIL_AUTH.md  USAGE_GUIDE.md  deny.toml  mindone_1.0.0.md  mindone_cli_1.0.0.md  mindone_mvp.md  problem.md  test-cli-web-login.sh  test-email-auth.sh  verify-config.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security.yml
crates/mindone-accounting/: Cargo.toml
crates/mindone-accounting/src/: billing.rs  fixed.rs  glicko2.rs  ledger.rs  lib.rs  optimize.rs  policy.rs  quality.rs  reserve.rs  routing.rs  tier.rs
crates/mindone-cli/: Cargo.toml
crates/mindone-cli/src/: api.rs  app.rs  auth.rs  cli.rs  config.rs  context.rs  coordinator.rs  doctor.rs  e2ee.rs  engine.rs  error.rs  lib.rs  main.rs  model.rs  model_catalog.rs  node.rs  output.rs  quota.rs  serve.rs  serve_proxy.rs  share.rs  storage.rs  tui.rs  vault.rs
crates/mindone-cli/tests/: cli_contract.rs  linux_sandbox.rs  windows_job.rs
crates/mindone-common/: Cargo.toml
crates/mindone-common/src/: bounded_file.rs  config.rs  error.rs  hash.rs  lib.rs  paths.rs  redact.rs  secret.rs  transport.rs
crates/mindone-coordinator/: Cargo.toml  build.rs
crates/mindone-coordinator/src/: anti_abuse.rs  attestation.rs  auth.rs  config.rs  db.rs  device_binding.rs  email.rs  error.rs  execution_fingerprint.rs  lib.rs  main.rs  operator_billing.rs  operator_grant.rs  operator_quality.rs  operator_sla.rs  password.rs  private_evaluation_catalog.rs  quality.rs  settlement.rs  standard_data.rs  web_auth.rs
crates/mindone-coordinator/src/routes/: api_keys.rs  attestation_routes.rs  auth_routes.rs  evaluations.rs  governance.rs  jobs.rs  mod.rs  nodes_models.rs  openai_gateway.rs  quota.rs  regulated_jobs.rs
crates/mindone-coordinator/templates/: login.html  register.html
crates/mindone-coordinator/tests/: database_role.rs  ledger_heads.rs  ledger_integrity.rs  ledger_migration.rs  postgres_integration.rs  router.rs  runtime_schema.rs  schema_v31.rs  schema_v32.rs  schema_v33.rs  schema_v34.rs  schema_v35.rs  schema_v36.rs  schema_v37.rs  schema_v38.rs  schema_v39.rs
crates/mindone-engine/: Cargo.toml
crates/mindone-engine/src/: download.rs  hardware.rs  install.rs  lib.rs  logging.rs  model.rs  process.rs  validation.rs
crates/mindone-engine/tests/: real_install.rs
crates/mindone-protocol/: Cargo.toml
crates/mindone-protocol/src/: accounting.rs  api_keys.rs  auth.rs  common.rs  endpoints.rs  governance.rs  jobs.rs  lib.rs  models.rs  nodes.rs  openai.rs
crates/mindone-sandbox/: Cargo.toml
crates/mindone-sandbox/src/: attestation.rs  bounded_process.rs  capability.rs  client_verifier.rs  external_attester.rs  launch.rs  lib.rs  linux_supervisor.rs  tee_runtime.rs  windows_supervisor.rs
crates/mindone-sandbox/tests/: macos_seatbelt.rs
crates/mindone-sqlx/: Cargo.toml
crates/mindone-sqlx/src/: lib.rs
deploy/: .env.example  Dockerfile  docker-compose.cloudflared.yml  docker-compose.dev.yml  docker-compose.quality-operator.yml  docker-compose.test.yml  docker-compose.yml  postgres-ensure-runtime-role.sh  postgres-pg_hba.conf  postgres-tls-entrypoint.sh
docs/: API.md  CLI_COMPLIANCE.md  COLLABORATION.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MODELS.md  OPERATIONS.md  SECURITY.md
docs/adr/: 0001-model-formats.md  0002-accounting-and-reserve.md  0003-routing-and-tier.md  0004-trust-transport-and-attestation.md  0005-instance-canary-risk.md
docs/specs/: README.md  mindone_1.0.0.md  mindone_cli_1.0.0.md
migrations/: 0001_initial.sql  0002_device_bound_local_auth.sql  0003_reserve_release_audit.sql  0004_session_device_key.sql  0005_optional_gpu_temperature_policy.sql  0006_canonical_model_identity.sql  0007_hardware_attestation_challenges.sql  0008_server_owned_model_quality.sql  0009_regulated_e2ee_data_plane.sql  0010_server_owned_evaluation_challenges.sql  0011_minimized_anti_abuse_signals.sql  0012_regulated_idempotency_fingerprints.sql  0013_anti_abuse_user_scoped_idempotency.sql  0014_standard_job_integrity_and_weighted_settlement.sql  0015_governance_transparency_indexes.sql  0016_device_key_possession.sql  0017_refresh_pop_and_verified_uptime.sql  0018_hidden_evaluation_jobs.sql  0019_latency_vram_fingerprint.sql  0020_operator_quota_grants.sql  0021_operational_quality_and_reserve.sql  0022_standard_data_at_rest.sql  0023_instance_canary_quarantine.sql  0024_authoritative_ledger_heads.sql  0025_model_tier_transition_audit.sql  0026_runtime_database_role.sql  0027_canonical_ledger_hashes.sql  0028_private_hidden_benchmark.sql  0029_node_coordinator_rtt.sql  0030_node_device_binding.sql  0031_private_hidden_hmac_budget.sql  0032_physical_billing_contract.sql  0033_billing_profile_provisioning.sql  0034_require_current_physical_billing.sql  0035_standard_job_sse_events.sql  0036_audited_sla_exclusions.sql  0037_email_password_auth.sql  0038_job_speed_class.sql  0039_inference_api_keys.sql
scripts/: audit-hf-model-catalog.sh  e2e-test.sh  generate-postgres-tls.sh  install-url-validation-smoke.sh  install.ps1  install.sh  mvp-dev-smoke-contract-test.sh  mvp-dev-smoke.sh  release-archive-smoke.sh  uninstall-smoke.sh  uninstall.ps1  uninstall.sh  validate-private-v2-compose.sh  verify-windows-self-contained.ps1
