[workspace]
members = [
    "crates/mindone-accounting",
    "crates/mindone-cli",
    "crates/mindone-common",
    "crates/mindone-coordinator",
    "crates/mindone-engine",
    "crates/mindone-protocol",
    "crates/mindone-sandbox",
    "crates/mindone-sqlx",
]
default-members = ["crates/mindone-cli", "crates/mindone-coordinator"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
rust-version = "1.88"
authors = ["MindOne Contributors"]
license = "Apache-2.0"
repository = "https://github.com/beluga383/MindOne"

[workspace.dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "json", "macros", "ws"] }
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env", "string"] }
crossterm = "0.29"
curve25519-dalek = "4.1"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "rand_core"] }
fs2 = "0.4"
flate2 = "1.1"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.3"
http-body-util = "0.1"
jsonwebtoken = "9.3"
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
    "vendored",
] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder", "hostname"] }
libc = "0.2"
nix = { version = "0.30", features = ["process", "resource", "signal", "user"] }
parking_lot = "0.12"
rand = "0.8"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm", "std"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
ring = "0.17"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { package = "mindone-sqlx", path = "crates/mindone-sqlx" }
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json", "migrate", "time", "uuid"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["json", "migrate", "time", "uuid"] }
subtle = "2.6"
sysinfo = "0.36"
tempfile = "3.20"
tar = "0.4"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
toml = "0.8"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["catch-panic", "cors", "limit", "request-id", "sensitive-headers", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.17", features = ["serde", "v4", "v7"] }
zeroize = { version = "1.8", features = ["derive"] }
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
zstd = "0.13"

# 测试依赖
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"
wiremock = "0.6"

# 工作区内部依赖
mindone-accounting = { path = "crates/mindone-accounting" }
mindone-common = { path = "crates/mindone-common" }
mindone-engine = { path = "crates/mindone-engine" }
mindone-protocol = { path = "crates/mindone-protocol" }
mindone-sandbox = { path = "crates/mindone-sandbox" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
