[package]
name = "mindone-coordinator"
description = "MindOne 协调服务器"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mindone_coordinator"
path = "src/lib.rs"

[[bin]]
name = "mindone-coordinator"
path = "src/main.rs"

[dependencies]
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
hex.workspace = true
http.workspace = true
futures-util.workspace = true
lettre.workspace = true
mindone-accounting.workspace = true
mindone-common.workspace = true
mindone-protocol.workspace = true
rand.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serial_test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
