[package]
name = "mindone-sqlx"
description = "MindOne 的 PostgreSQL-only SQLx 门面"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqlx-core.workspace = true
sqlx-postgres.workspace = true

[lints]
workspace = true
